// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`abis wasm bindings computes a complete address 1`] = `
CompleteAddress {
  "address": AztecAddress {
    "buffer": {
      "data": [
        4,
        209,
        219,
        143,
        81,
        201,
        96,
        61,
        241,
        128,
        21,
        108,
        164,
        236,
        8,
        45,
        142,
        200,
        131,
        202,
        34,
        158,
        246,
        182,
        174,
        242,
        41,
        132,
        73,
        135,
        219,
        144,
      ],
      "type": "Buffer",
    },
  },
  "partialAddress": Fr {
    "value": 10897391178562908763049525880961042572704848102367432881499479507388293926324n,
  },
  "publicKey": Point {
    "kind": "point",
    "x": Fr {
      "value": 1n,
    },
    "y": Fr {
      "value": 2n,
    },
  },
}
`;

exports[`abis wasm bindings computes a function leaf 1`] = `
Fr {
  "value": 10029119936489841222848528683116571361787784093621684527831949097807973602522n,
}
`;

exports[`abis wasm bindings computes a function selector 1`] = `
{
  "data": [
    169,
    5,
    156,
    187,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings computes commitment nonce 1`] = `
Fr {
  "value": 15037737304593430145799664171885713646954285271176209820507750905803678576248n,
}
`;

exports[`abis wasm bindings computes contract leaf 1`] = `
Fr {
  "value": 13948479777014613498683963452073766103597676873444377362122080177417772502073n,
}
`;

exports[`abis wasm bindings computes function tree root 1`] = `
Fr {
  "value": 15979488130708398862353928152734348735558166483311854286859949227944986354160n,
}
`;

exports[`abis wasm bindings computes siloed commitment 1`] = `
Fr {
  "value": 10892332002796241285196011795551325199343783925143797980654005808647524714988n,
}
`;

exports[`abis wasm bindings computes siloed nullifier 1`] = `
Fr {
  "value": 14473271997678443728796956147606509460198985069653945082504936970853592732846n,
}
`;

exports[`abis wasm bindings computes unique commitment 1`] = `
Fr {
  "value": 14568973015730990589147722427207497260493217689860805707710587783435603593832n,
}
`;

exports[`abis wasm bindings hashes VK 1`] = `
{
  "data": [
    35,
    221,
    170,
    120,
    143,
    68,
    88,
    241,
    85,
    238,
    222,
    64,
    49,
    253,
    155,
    115,
    111,
    11,
    29,
    106,
    155,
    24,
    65,
    2,
    46,
    140,
    246,
    74,
    38,
    73,
    241,
    92,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes a tx request 1`] = `
{
  "data": [
    29,
    213,
    196,
    165,
    208,
    196,
    23,
    25,
    151,
    114,
    74,
    20,
    135,
    76,
    17,
    29,
    26,
    237,
    251,
    194,
    60,
    51,
    12,
    127,
    51,
    174,
    190,
    187,
    179,
    165,
    92,
    49,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes constructor info 1`] = `
Fr {
  "value": 5664087062924642543813356778220024396795508505201218297340647808484779592628n,
}
`;

exports[`abis wasm bindings hashes empty function args 1`] = `
Fr {
  "value": 0n,
}
`;

exports[`abis wasm bindings hashes function args 1`] = `
Fr {
  "value": 6716481451198467777401378133603693117625358413864032583365074202975996912799n,
}
`;

exports[`abis wasm bindings hashes many function args 1`] = `
Fr {
  "value": 1809840003714778572122478958620968290295223771977552961702981812810995776598n,
}
`;
